--- a/Pages/single.html
+++ b/Pages/single.html
@@ -747,7 +747,7 @@
     <script src="../products-data/products-data.js"></script>
     <script src="../js/single.js"></script>
     <script src="../js/search-input.js"></script>
-    <script src="../js/loading.js"></scri>
+    <script src="../js/loading.js"></script>
     <script src="../js/main_2.js"></script>
 </body>
 
