--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             </div>
              <div class="flex items-center justify-center mt-[-8px]">
                 <button id="delet-profile"
-                    class="flex items-center gap-[5px]  text-[red] w-[230px] flex items-center justify-center py-[5px] px-[2px] rounded-[4px] mt-[15px]">
+                    class="flex items-center cursor-pointer gap-[5px]  text-[red] w-[230px] flex items-center justify-center py-[5px] px-[2px] rounded-[4px] mt-[15px]">
                     <p>Удалить аккаунт</p>
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                         fill="red">
