--- a/Pages/filter.html
+++ b/Pages/filter.html
@@ -89,7 +89,7 @@
                         class="absolute top-[-5px] left-[35px] w-[11.28px] h-[11px] bg-[#FF6633] text-white rounded-[4px] flex items-center justify-center px-[4px] py-[2px] text-[9px]">0</span>
                     <p>Избранное</p>
                 </a>
-                <a href="./category.html" class="flex cursor-pointer items-center flex-col gap-[7px]">
+                <a href="./filter.html" class="flex cursor-pointer items-center flex-col gap-[7px]">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M11.3325 1.89776C11.3324 1.89785 11.3327 1.89767 11.3325 1.89776L3.33366 5.89721L3.33255 5.89776C2.82288 6.15102 2.50045 6.67089 2.50005 7.24V16.7635C2.49608 17.3334 2.81541 17.8563 3.32416 18.113C3.32387 18.1129 3.32445 18.1132 3.32416 18.113L11.3237 22.1128C11.7462 22.3242 12.2438 22.3243 12.6663 22.1129L20.6664 18.1128L20.6675 18.1122C21.1773 17.8589 21.4997 17.3389 21.5 16.7697V7.24026C21.4997 6.67105 21.1773 6.15106 20.6675 5.89776L20.6664 5.89721L12.6675 1.89776C12.6674 1.89767 12.6677 1.89786 12.6675 1.89776C12.2474 1.6892 11.7527 1.68919 11.3325 1.89776ZM10.8875 1.00223C11.5883 0.654 12.4118 0.654 13.1125 1.00223L13.1137 1.00278L21.1125 5.00223C21.1124 5.00215 21.1127 5.00231 21.1125 5.00223C21.9618 5.42448 22.4995 6.29123 22.5 7.23973V16.77C22.4995 17.7184 21.9624 18.5852 21.1132 19.0074C21.113 19.0075 21.1134 19.0073 21.1132 19.0074L13.1138 23.0071C13.1138 23.0072 13.1138 23.0071 13.1138 23.0071C12.4097 23.3594 11.5806 23.3595 10.8764 23.0072C10.8764 23.0072 10.8765 23.0072 10.8764 23.0072L2.87644 19.0072L2.87506 19.0065C2.02685 18.5791 1.49413 17.708 1.50005 16.7584V7.24C1.50055 6.29154 2.03772 5.4248 2.88695 5.00253C2.88675 5.00263 2.88715 5.00243 2.88695 5.00253L10.8864 1.00278L10.8875 1.00223Z"
@@ -103,6 +103,14 @@
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M6.5529 3.27638C6.67639 3.02939 6.97673 2.92928 7.22372 3.05277L17.2237 8.05277C17.4707 8.17627 17.5708 8.4766 17.4473 8.72359C17.3238 8.97058 17.0235 9.0707 16.7765 8.9472L6.7765 3.9472C6.52951 3.82371 6.4294 3.52337 6.5529 3.27638Z"
                             fill="#414141" />
+                    </svg>
+                    <p>Products</p>
+                </a>
+                <a href="./category.html" class="flex cursor-pointer items-center flex-col gap-[7px]">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#414141">
+                        <path
+                            d="M360-240h440v-107H360v107ZM160-613h120v-107H160v107Zm0 187h120v-107H160v107Zm0 186h120v-107H160v107Zm200-186h440v-107H360v107Zm0-187h440v-107H360v107ZM160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Z" />
                     </svg>
                     <p>Category</p>
                 </a>
@@ -250,7 +258,7 @@
         </div>
     </div>
 
-    <div id=""
+    <div
         class="filter-page fixed flex duration-300 lg:hidden w-full h-full z-[200]  top-0 bg-[white] rounded-tl-[10px] rounded-tr-[10px]">
         <div class="relative w-full">
             <div class="w-full">
@@ -303,16 +311,18 @@
                 </div>
             </div>
             <div
-                class="categories-view fixed w-full h-full translate-y-[100%] duration-300 z-[201]  top-0 bg-[white] rounded-tl-[10px] rounded-tr-[10px]">
-                <div>
+                class="categories-view fixed w-full h-full translate-y-[100%]  duration-300 z-[201]  top-0 bg-[white] rounded-tl-[10px] rounded-tr-[10px]">
+                <div class="flex items-center gap-[10px] px-[15px]">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#1f1f1f#1f1f1f#1f1f1f">
+                        <path d="M640-80 240-480l400-400 71 71-329 329 329 329-71 71Z" />
+                    </svg>
                     <h1 class="text-center py-[7px] text-[18px] font-bold">Категория продукта</h1>
+                </div>
+                <div>
                     <hr class="border-[2px] text-[#F3F2F1]">
-                    <div id="categories-text" class="flex flex-col gap-[7px] px-[15px] mt-[20px]">
-                        <div class="flex items-center py-[5px] gap-[7px]">
-                            <input class="cursor-pointer w-[15px] h-[15px]" type="checkbox">
-                            <p>Nmadr</p>
-                        </div>
-                        <hr class="border-[1px] text-[#F3F2F1]">
+                    <div id="categories-text" class="flex flex-col over gap-[7px] px-[15px] mt-[20px]">
+
                     </div>
                 </div>
             </div>
@@ -337,11 +347,11 @@
                 </div>
                 <div class="flex items-center justify-between">
                     <div>
-                        <h1 class="text-[48px] font-bold">Все продукты</h1>
+                        <h1 class="text-[32px] sm:text-[48px] font-bold">Все продукты</h1>
                     </div>
                     <div class=" flex lg:hidden">
-                        <svg class="filter-view" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                            fill="#1f1f1f#1f1f1f#1f1f1f">
+                        <svg class="filter-view" xmlns="http://www.w3.org/2000/svg" height="24px"
+                            viewBox="0 -960 960 960" width="24px" fill="#1f1f1f#1f1f1f#1f1f1f">
                             <path
                                 d="M710-150q-63 0-106.5-43.5T560-300q0-63 43.5-106.5T710-450q63 0 106.5 43.5T860-300q0 63-43.5 106.5T710-150Zm0-80q29 0 49.5-20.5T780-300q0-29-20.5-49.5T710-370q-29 0-49.5 20.5T640-300q0 29 20.5 49.5T710-230Zm-550-30v-80h320v80H160Zm90-250q-63 0-106.5-43.5T100-660q0-63 43.5-106.5T250-810q63 0 106.5 43.5T400-660q0 63-43.5 106.5T250-510Zm0-80q29 0 49.5-20.5T320-660q0-29-20.5-49.5T250-730q-29 0-49.5 20.5T180-660q0 29 20.5 49.5T250-590Zm230-30v-80h320v80H480Zm230 320ZM250-660Z" />
                         </svg>
