--- a/Pages/filter.html
+++ b/Pages/filter.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <!-- <div id="loading" class="fixed z-1500 w-full h-full bg-[white] flex items-center justify-center    ">
+    <div id="loading" class="fixed z-1500 w-full h-full bg-[white] flex items-center justify-center">
         <div class="relative">
             <img src="../assets/loading/loading.svg" alt="loading">
             <div>
@@ -259,7 +259,7 @@
     </div>
 
     <div
-        class="filter-page fixed flex duration-300 lg:hidden w-full h-full z-[200]  top-0 bg-[white] rounded-tl-[10px] rounded-tr-[10px]">
+        class="filter-page fixed flex duration-300 lg:hidden w-full h-full z-[200] top-0 bg-[white] rounded-tl-[10px] rounded-tr-[10px]">
         <div class="relative w-full">
             <div class="w-full">
                 <div class="py-[8px]">
@@ -364,11 +364,10 @@
         <section>
             <div
                 class="container mx-auto px-[20px] pb-[40px] sm:pb-[80px] 2xl:px-[127px] flex pt-[40px] items-start justify-between gap-[40px]">
-                <div class="hidden lg:flex max-w-[322px] sticky top-25 z-10 p-[0px] w-full fixed h-[450px]">
+                <div class="hidden lg:flex max-w-[322px] sticky top-25 z-1 p-[0px] w-full fixed h-[450px]">
                     <div class="w-full">
                         <div id="click"
                             class="bg-[#ffff] flex items-center relative justify-center py-[10px] px-[10px] rounded-[5px] cursor-pointer">
-                            <!-- <img src="../assets/home/filter.svg" alt="filter"> -->
                             <h1 class="font-bold text-[20px]">Фильтр</h1>
                         </div>
                         <div id="sort"
