--- a/Pages/like.html
+++ b/Pages/like.html
@@ -268,8 +268,7 @@
                 <div>
                     <h1 class="text-[34px] sm:text-[64px] font-bold">Избранное</h1>
                 </div>
-                <div
-                    class="like-products  grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-[10px] sm:gap-[40px] pt-[20px] sm:pt-[40px]">
+                <div class="like-products  grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-[10px] sm:gap-[40px] pt-[20px] sm:pt-[40px]">
 
                 </div>
             </div>
