--- a/Pages/search.html
+++ b/Pages/search.html
@@ -65,11 +65,11 @@
 
     <main>
         <section class="flex sm:hidden">
-            <div class="container mx-auto px-[20px]  pt-[30px] sm:pt-[80px] 2xl:px-[127px] pb-[70px]">
-                <div class="fixed top-0 pt-[15px]  w-full z-50  items-center gap-[7px] pb-[5px] bg-[#FBF8EC]">
-                    <div class="relative max-w-[335px] w-full flex items-center gap-[7px]">
+            <div class="container mx-auto px-[20px]  pt-[15px] 2xl:px-[127px] pb-[70px]">
+                <div class="max-w-[595px]  w-full  items-center gap-[7px] bg-[#FBF8EC]">
+                    <div class="relative flex items-center gap-[7px]">
                         <input id="search-phone"
-                            class="border-[1px] bg-white border-[#BFBFBF] w-full py-[6px] rounded-[8px] pl-[34px] pr-[20px] outline-none"
+                            class="border-[1px] bg-white border-[#BFBFBF]  w-full py-[6px] rounded-[8px] pl-[34px] pr-[20px] outline-none"
                             placeholder="Найти товар" type="search">
                         <img class="absolute top-2 left-2" src="../assets/header/search2.svg" alt="search">
                         <div id="search-cards-phone"
@@ -80,7 +80,7 @@
 
                 </div>
                 <div
-                    class="search-products grid grid-cols-3 md:grid-cols-3 xl:grid-cols-4 gap-[10px] sm:gap-[40px] pt-[35px] sm:pt-[40px]">
+                    class="search-products grid grid-cols-3 md:grid-cols-3 xl:grid-cols-4 gap-[10px] sm:gap-[40px] pt-[10px] sm:pt-[10px]">
 
                 </div>
             </div>
