--- a/Pages/filter.html
+++ b/Pages/filter.html
@@ -25,9 +25,9 @@
             </div>
         </div>
 
-    </div> -->
+    </div> 
 
-    <header class="py-[16px] bg-[white] fixed z-[100] w-full shadow-[0_4px_6px_-1px_rgba(0,0,0,0.1)]">
+    <header class="py-[16px] bg-[white] fixed top-0 z-[100] w-full shadow-[0_4px_6px_-1px_rgba(0,0,0,0.1)]">
         <div class="container mx-auto px-[20px] gap-[40px] 2xl:px-[127px] flex items-center justify-between">
             <div>
                 <a class="flex items-center gap-[11px]" href="../index.html">
