--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -292,7 +292,7 @@
                         <hr class="text-[#F3F2F1]">
                         <div class="flex flex-col gap-[10px] pt-[14px] sm:pt-[24px] pb-[14px] sm:pb-[24px]">
                             <div class="flex items-center justify-between">
-                                <p class="text-[#8F8F8F] text-[14px] sm:text-[16px]">3 товара</p>
+                                <p class="text-[#8F8F8F] text-[14px] sm:text-[16px]"><span id="cart-number">0</span> товара</p>
                                 <p class="font-bold text-[14px] sm:text-[16px]"><span id="all-price">258,10</span>₽</p>
                             </div>
                             <div class="flex items-center justify-between">
