--- a/Pages/filter.html
+++ b/Pages/filter.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div id="loading" class="fixed z-1500 w-full h-full bg-[white] flex items-center justify-center">
+    <!-- <div id="loading" class="fixed z-1500 w-full h-full bg-[white] flex items-center justify-center">
         <div class="relative">
             <img src="../assets/loading/loading.svg" alt="loading">
             <div>
@@ -25,7 +25,7 @@
             </div>
         </div>
 
-    </div> 
+    </div>  -->
 
     <header class="py-[16px] bg-[white] fixed top-0 z-[100] w-full shadow-[0_4px_6px_-1px_rgba(0,0,0,0.1)]">
         <div class="container mx-auto px-[20px] gap-[40px] 2xl:px-[127px] flex items-center justify-between">
@@ -259,7 +259,7 @@
     </div>
 
     <div
-        class="filter-page fixed flex duration-300 lg:hidden w-full h-full z-[200] top-0 bg-[white] rounded-tl-[10px] rounded-tr-[10px]">
+        class="filter-page fixed flex translate-y-[100%]  border border-gray-300 duration-300 lg:hidden w-full h-full z-[200] top-0 bg-[white] rounded-tl-[10px] rounded-tr-[10px]">
         <div class="relative w-full">
             <div class="w-full">
                 <div class="py-[8px]">
@@ -272,7 +272,7 @@
                     <img src="../assets/home/Shape (Stroke).svg" alt="arrow">
                 </div>
                 <hr class="border-[2px] text-[#F3F2F1]">
-                <div class="flex items-center justify-between bg-white  py-[14px] px-[15px] cursor-pointer">
+                <div class="towns flex items-center justify-between bg-white  py-[14px] px-[15px] cursor-pointer">
                     <h1>Город производства</h1>
                     <img src="../assets/home/Shape (Stroke).svg" alt="arrow">
                 </div>
@@ -312,8 +312,8 @@
             </div>
             <div
                 class="categories-view fixed w-full h-full translate-y-[100%]  duration-300 z-[201]  top-0 bg-[white] rounded-tl-[10px] rounded-tr-[10px]">
-                <div class="flex items-center gap-[10px] px-[15px]">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                <div class="categories-view-close flex items-center gap-[10px] px-[15px]">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"
                         fill="#1f1f1f#1f1f1f#1f1f1f">
                         <path d="M640-80 240-480l400-400 71 71-329 329 329 329-71 71Z" />
                     </svg>
@@ -321,7 +321,23 @@
                 </div>
                 <div>
                     <hr class="border-[2px] text-[#F3F2F1]">
-                    <div id="categories-text" class="flex flex-col over gap-[7px] px-[15px] mt-[20px]">
+                    <div id="categories-text" class="flex flex-col over gap-[7px] px-[15px] pb-5 mt-[0px]">
+
+                    </div>
+                </div>
+            </div>
+            <div
+                class="town-view fixed w-full h-full translate-y-[100%]  duration-300 z-[201]  top-0 bg-[white] rounded-tl-[10px] rounded-tr-[10px]">
+                <div class="categories-view-close flex items-center gap-[10px] px-[15px]">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"
+                        fill="#1f1f1f#1f1f1f#1f1f1f">
+                        <path d="M640-80 240-480l400-400 71 71-329 329 329 329-71 71Z" />
+                    </svg>
+                    <h1 class="text-center py-[7px] text-[18px] font-bold">Категория продукта</h1>
+                </div>
+                <div>
+                    <hr class="border-[2px] text-[#F3F2F1]">
+                    <div id="town-text" class="flex flex-col over gap-[7px] px-[15px] pb-5 mt-[0px]">
 
                     </div>
                 </div>
