--- a/Pages/filter.html
+++ b/Pages/filter.html
@@ -264,7 +264,7 @@
             <div class="w-full">
                 <div class="py-[8px]">
                     <h1 class="text-[20px] font-bold text-center">Фильтр</h1>
-                    <p id="" class="close absolute top-[11px] text-[16px] right-[11px]">Отменить</p>
+                    <p id="" class="close cursor-pointer absolute top-[11px] text-[16px] right-[11px]">Отменить</p>
                 </div>
                 <hr class="border-[4px] text-[#F3F2F1]">
                 <div class="flex categories items-center justify-between bg-white  py-[14px] px-[15px] cursor-pointer">
@@ -300,7 +300,7 @@
                 </div>
                 <hr class="border-[2px] text-[#F3F2F1]">
                 <div class="px-[15px] fixed bottom-2 w-full z-[400]">
-                    <button
+                    <button id="filter-btn"
                         class="flex items-center  justify-center w-full rounded-[10px] py-[3px] flex-col bg-[#FF6633]">
                         <p class="text-[white]">Готово</p>
                         <div class="flex items-center gap-[5px]">
