--- a/Pages/filter.html
+++ b/Pages/filter.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <!-- <div id="loading" class="fixed z-1500 w-full h-full bg-[white] flex items-center justify-center">
+     <div id="loading" class="fixed z-1500 w-full h-full bg-[white] flex items-center justify-center">
         <div class="relative">
             <img src="../assets/loading/loading.svg" alt="loading">
             <div>
@@ -25,7 +25,7 @@
             </div>
         </div>
 
-    </div>  -->
+    </div> 
 
     <header class="py-[16px] bg-[white] fixed top-0 z-[100] w-full shadow-[0_4px_6px_-1px_rgba(0,0,0,0.1)]">
         <div class="container mx-auto px-[20px] gap-[40px] 2xl:px-[127px] flex items-center justify-between">
